added opcache, apcu

--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -8,12 +8,14 @@ RUN apt-get update \
     sudo \
     libpq-dev
 
-RUN docker-php-ext-install pdo pdo_pgsql zip
+RUN docker-php-ext-install pdo pdo_pgsql zip opcache
+COPY opcache.ini /usr/local/etc/php/conf.d/opcache.ini
 
 COPY php.ini /usr/local/etc/php/php.ini
 
-RUN pecl install xdebug-2.6.0 \
-    && docker-php-ext-enable xdebug
+RUN pecl install xdebug-2.6.0 apcu-5.1.5 \
+    && docker-php-ext-enable xdebug \
+    && docker-php-ext-enable apcu
 
 RUN echo 'zend_extension="/usr/local/lib/php/extensions/no-debug-non-zts-20151012/xdebug.so"' >> /usr/local/etc/php/php.ini
 RUN echo 'xdebug.remote_port=9000' >> /usr/local/etc/php/php.ini
