--- a/.docker/config/vhosts/symfony.conf
+++ b/.docker/config/vhosts/symfony.conf
@@ -1,12 +1,12 @@
 <VirtualHost *:80>
 
-        Define server_name nefco.local
-        Define basedocroot  /home/wwwroot/nefco
+        Define server_name symfony.local
+        Define basedocroot  /home/wwwroot/symfony
         Define docrootweb   ${basedocroot}/public
         Define logdir   /var/log/apache2/
 
         <FilesMatch .php$>
-         SetHandler "proxy:fcgi://nefco_php:9000"
+         SetHandler "proxy:fcgi://symfony_php:9000"
         </FilesMatch>
 
         ServerName ${server_name}
