fix rootDirectory index

--- a/.docker/config/vhosts/symfony.conf
+++ b/.docker/config/vhosts/symfony.conf
@@ -34,7 +34,7 @@
         </Directory>
 
         <Directory ${docrootweb}>
-            DirectoryIndex ${docrootweb}/index.php
+            DirectoryIndex index.php
             <IfModule mod_negotiation.c>
                 Options -MultiViews
             </IfModule>
