--- a/symfony/.env.example
+++ b/symfony/.env.example
@@ -24,7 +24,10 @@ APP_SECRET=acdd752787ce622ac3a067aa123ccf8d
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+
+#DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=pgsql://postgres:postgres@postgres/db_name
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
